--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "eslint-config-next": "13.0.2",
     "framer-motion": "^7.6.5",
     "jotai": "^1.9.1",
+    "moment": "^2.29.4",
     "next": "13.0.2",
+    "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
+    "react-moment": "^1.1.2",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/qs": "^6.9.7",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2"
