--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.1.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "firebase-admin": "^11.4.1",
     "framer-motion": "^7.6.5",
     "jotai": "^1.9.1",
     "moment": "^2.29.4",
@@ -29,7 +30,9 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
-    "typescript": "4.8.4"
+    "swr": "^2.0.0",
+    "typescript": "4.8.4",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/qs": "^6.9.7",
